test quasi tutti finiti escluso doppio check notification
